Fix Java 11 stream collection compatibility